--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,16 @@
 }
 
 :root {
-  --primary-color:#fff;
+  --primary-color:rgb(255, 255, 255);
   --secondary-color:rgb(24, 124, 163);
-  --orange-900:orange;
+  --orange-900:rgb(255, 165, 0);
   --gray-100: rgb(243 244 246);
   --gray-200: rgb(231, 230, 230);
+  --gray-900: rgb(128, 128, 128);
   --black-900: rgb(0, 0, 0);
+  --pink-900: #cc00ff;
+  --green-200: #80ffdb;
+  --red-900: rgb(255, 0, 0);
 }
 
 a {
