--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,14 +1,3 @@
-.item-container {
-    grid-template-columns: repeat(4, 1fr);
-    margin-top: .3rem;
-}
-
-.dot-icon {
-    right: 0%;
-    top: 11.5rem;
-    visibility: hidden;
-}
-
 .item-section:hover {
     box-shadow: 1px 1px 1px var(--gray-900), 1px 1px 2px var(--gray-900);
 }
@@ -16,6 +5,13 @@
 .item-section:hover .dot-icon {
     visibility: inherit;
 }
+
+.more-feature-icon {
+    right: 0%;
+    top: 11.5rem;
+    visibility: hidden;
+}
+
 
 .card-image img {
     height: 11rem;
