--- a/src/pages/Explore/Explore.css
+++ b/src/pages/Explore/Explore.css
@@ -11,3 +11,8 @@
     border-radius: 1.2rem;
     margin: .5rem;
 }
+
+.item-container {
+    grid-template-columns: repeat(4, 1fr);
+    margin: 1rem;
+}
