--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Creepster&family=Inspiration&family=Libre+Baskerville&family=Lobster&family=Merriweather&family=Pacifico&family=Playfair+Display:wght@600&family=Roboto+Slab:wght@300&family=Tai+Heritage+Pro&family=Yellowtail&display=swap');
+
 * {
   margin: 0%;
   padding: 0%;
@@ -7,9 +8,9 @@
 }
 
 :root {
-  --primary-color:rgb(255, 255, 255);
-  --secondary-color:rgb(25, 131, 173);
-  --orange-900:rgb(255, 165, 0);
+  --primary-color: rgb(255, 255, 255);
+  --secondary-color: rgb(25, 131, 173);
+  --orange-900: rgb(255, 165, 0);
   --gray-100: rgb(243 244 246);
   --gray-200: rgb(231, 230, 230);
   --gray-900: rgb(128, 128, 128);
@@ -28,3 +29,33 @@ a {
 button {
   cursor: pointer;
 }
+
+/* 
+@media screen and (max-width: 1240px) {
+  html {
+    font-size: 14px;
+  }
+
+
+}
+
+@media screen and (max-width: 900px) {
+  html{
+    font-size: 13px;
+  }
+  .item-container {
+    grid-template-columns: repeat(3, 1fr) !important;
+    margin: 1rem;
+  }
+}
+
+@media screen and (max-width: 690px) {
+  .item-container{
+    grid-template-columns: repeat(2, 1fr) !important;
+
+  }
+}
+
+@media screen and (max-width: 570px){
+ 
+} */
