--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header-bar {
-    grid-template-columns: 15rem 1fr 15rem;
+    justify-content: space-around;
     height: 8.5vh;
     top: 0;
     box-shadow: 0 1px 2px var(--black-900);
@@ -12,6 +12,10 @@
 
 .tube-txt {
     color: var(--secondary-color);
+}
+
+.superscript-txt {
+    font-size: .6rem;
 }
 
 .vl-logo {
