--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -2,11 +2,11 @@
     box-shadow: 1px 1px 1px var(--gray-900), 1px 1px 2px var(--gray-900);
 }
 
-.item-section:hover .dot-icon {
+.item-section:hover .more-feature-icon-model {
     visibility: inherit;
 }
 
-.more-feature-icon {
+.more-feature-icon-model {
     right: 0%;
     top: 11.5rem;
     visibility: hidden;
