--- a/src/pages/Authentication/Auth.css
+++ b/src/pages/Authentication/Auth.css
@@ -64,12 +64,15 @@
 }
 
 
-.logout-main-container{
+.logout-main-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
     height: 90vh;
 }
-.logout-container{
+
+.logout-container {
     border: 2px solid var(--secondary-color);
     border-radius: .5rem;
     display: grid;
@@ -79,18 +82,29 @@
     padding: .5rem;
     height: 12rem;
     margin-top: 2rem;
+    width: fit-content;
 }
-.avatar-section{
+
+.avatar-section {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
-.avatar{
+
+.avatar {
     border: 1px solid;
     width: fit-content;
     padding: 1.2rem .8rem;
     border-radius: 50%;
 }
-.logout-btn{
+
+.logout-btn {
     padding: 5px 0;
+}
+
+.home-btn {
+    color: var(--orange-900);
+    border: 2px solid;
+    height: fit-content;
+    width: fit-content;
 }
