--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     top: 0;
     box-shadow: 0 1px 2px var(--black-900);
     background-color: var(--gray-100);
+    font-family: 'Libre Baskerville', serif;
 }
 
 .view-txt {
