--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,5 +1,6 @@
 .item-section:hover {
-    box-shadow: 1px 1px 1px var(--gray-900), 1px 1px 2px var(--gray-900);
+    box-shadow: 1px 1px 1px var(--gray-900), 
+                1px 1px 2px var(--gray-900);
 }
 
 .item-section:hover .more-feature-icon-model {
