--- a/src/pages/SingleVideo/SingleVideo.css
+++ b/src/pages/SingleVideo/SingleVideo.css
@@ -1,7 +1,5 @@
 .single-video-container {
     margin: 1rem 2rem;
-    display: grid;
-    gap: 1rem;
 }
 
 .video-frame {
@@ -18,34 +16,16 @@
     width: 100%;
 }
 
-.view-old-section {
-    display: flex;
+.view-section {
     border-bottom: 1px solid;
     padding: .5rem 0 .8rem 0;
-    gap: 1rem;
     font-size: .8rem;
-    justify-content: space-between;
 }
 
 .subscriber-section {
     display: flex;
     padding-top: .8rem;
     gap: .5rem;
-}
-
-.channel-name-btn {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-}
-
-.subscribe-btn {
-    background-color: red;
-    color: white;
-    padding: .5rem 1rem;
-    border: none;
-    font-weight: 600;
 }
 
 .video-view {
