--- a/src/components/PlaylistModal/PlaylistModal.css
+++ b/src/components/PlaylistModal/PlaylistModal.css
@@ -1,17 +1,5 @@
-.playlist {
-    display: grid;
-
-}
-
-.playlist-section {
-    background-color: white;
-    padding: 1rem 2rem;
-    text-align: center;
-    box-shadow: 2px 2px 2px black, 2px 2px 2px red;
-}
-
 .playlist-container {
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     display: grid;
     place-items: center;
@@ -21,11 +9,26 @@
     z-index: 2;
 }
 
+.playlist-section {
+    background-color: white;
+    padding: 1rem 2rem;
+    border: 3px solid var(--secondary-color);
+}
+
+.playlist {
+    display: grid;
+    justify-content: flex-start;
+    padding-left: .5rem;
+}
+
 .input-section input {
     padding: 5px .6rem;
+    border: 3px solid var(--secondary-color);
 }
 
 .input-section button{
     padding: 5px .6rem;
     margin-left: 1rem;
+    border: 3px solid var(--secondary-color);
+    color: var(--secondary-color);
 }
