--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,4 +1,5 @@
 .sidebar-container {
+    position: sticky;
     height: 91.5vh;
     top: 8.5vh;
     background-color: var(--gray-100);
@@ -18,4 +19,54 @@
 .active {
     background-color: var(--secondary-color);
     color: var(--primary-color);
+}
+
+@media screen and (max-width: 900px) {
+    .sidebar-container {
+        display: inherit !important;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: unset;
+        padding: 0;
+        height: max-content;
+        background-color: var(--white);
+        box-shadow: var(--box-shadow-light);
+        z-index: 2;
+    }
+
+    #sidebar-icon span {
+        margin: .2rem ;
+    }
+
+    #sidebar-icon h4 {
+        display: none;
+    }
+
+    .sidebar-container li a {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0.5rem 0.25rem;
+    }
+
+    .routes-container {
+        display: flex !important;
+    }
+
+    .sidebar-container ul {
+        display: flex;
+        justify-content: space-around;
+        list-style: none;
+    }
+
+    #sidebar-icon {
+        display: flex;
+        flex-direction: column;
+        gap: .150rem;
+        justify-content: center;
+        padding: .350rem .6rem;
+        cursor: pointer;
+    }
 }
