--- a/src/pages/SingleVideo/SingleVideo.css
+++ b/src/pages/SingleVideo/SingleVideo.css
@@ -44,3 +44,15 @@
 .description {
     margin: 1rem 0 0 3rem;
 }
+
+@media screen and (max-width: 900px) {
+    .video-frame {
+        height: 40vh;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .video-frame {
+        height: 30vh;
+    }
+}
