--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 :root {
   --primary-color: rgb(255, 255, 255);
   --secondary-color: rgb(25, 131, 173);
+  --white:rgb(255, 255, 255);
   --orange-900: rgb(255, 165, 0);
   --gray-100: rgb(243 244 246);
   --gray-200: rgb(231, 230, 230);
