--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .header-bar {
-    justify-content: space-around;
-    height: 8.5vh;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
     top: 0;
     box-shadow: 0 1px 2px var(--black-900);
     background-color: var(--gray-100);
@@ -37,7 +38,7 @@
     padding: .5rem .5rem;
     border: 1px solid;
     border-right: none;
-    width: 24rem;
+    width: 100%;
 }
 
 .search-bar:focus {
@@ -49,4 +50,36 @@
     border: 1px solid;
     padding: 1.6px;
     cursor: grab;
+}
+
+.header-bar section:nth-child(1) {
+    grid-area: logo;
+}
+
+.header-bar section:nth-child(2) {
+    grid-area: search;
+}
+
+.header-bar section:nth-child(3) {
+    grid-area: auth;
+}
+
+@media screen and (max-width: 900px) {
+    .header-bar {
+        display: grid;
+        gap: .5rem;
+        justify-content: space-around;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: "logo auth"
+            "search search";
+    }
+
+    .header-bar section button{
+        display: none;
+    }
+
+    .signin-btn {
+        margin-left: 50%;
+    }
 }
