--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,22 +1,11 @@
 .item-section:hover {
-    box-shadow: 1px 1px 1px var(--gray-900), 
-                1px 1px 2px var(--gray-900);
+    box-shadow: 1px 1px 1px var(--gray-900),
+        1px 1px 2px var(--gray-900);
 }
-
-.item-section:hover .more-feature-icon-model {
-    visibility: inherit;
-}
-
-.more-feature-icon-model {
-    right: 0%;
-    top: 11.5rem;
-    visibility: hidden;
-}
-
 
 .card-image img {
-    height: 11rem;
     width: 100%;
+    height: 22vh;
 }
 
 .logo-title {
