--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -18,7 +18,7 @@
     position: absolute;
     font-size: 1.3rem;
     right: 0%;
-    bottom: 19%;
+    top: 75%;
     border: none;
     background-color: inherit;
 }
