--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,7 +38,7 @@
     padding: .5rem .5rem;
     border: 1px solid;
     border-right: none;
-    width: 100%;
+    width: 18rem;
 }
 
 .search-bar:focus {
@@ -75,8 +75,12 @@
             "search search";
     }
 
-    .header-bar section button{
+    .header-bar section button {
         display: none;
+    }
+
+    .search-bar {
+        width: 100%;
     }
 
     .signin-btn {
