--- a/src/pages/Authentication/Auth.css
+++ b/src/pages/Authentication/Auth.css
@@ -35,8 +35,8 @@
 .visibility-off {
     padding: 4px 3px;
     right: 2px;
-    top: 1.1rem;
-    background-color: var(--primary-color);
+    top: 38%;
+    background-color: transparent;
 }
 
 .checkbox-label {
@@ -52,9 +52,13 @@
     color: var(--blue-900);
 }
 
-.signin {
+.signin,
+.login-btn,
+.logout-btn {
     padding: 5px;
-    width: 18rem;
+    width: 100%;
+    background-color: transparent;
+    border-color: var(--secondary-color) ;
 }
 
 .fs {
@@ -92,21 +96,11 @@
 }
 
 .avatar {
-    border: 1px solid;
+    border: 2px solid;
     width: fit-content;
     padding: 1.2rem .8rem;
     border-radius: 50%;
-}
-
-.logout-btn {
-    padding: 5px 0;
-}
-
-.home-btn {
-    color: var(--orange-900);
-    border: 2px solid;
-    height: fit-content;
-    width: fit-content;
+    border-color: var(--secondary-color);
 }
 
 @media screen and (max-width: 900px) {
