--- a/src/pages/PlayList/PlayList.css
+++ b/src/pages/PlayList/PlayList.css
@@ -4,7 +4,7 @@
 
 .playlist-children{
     height: 10rem;
-    width: 10rem;
+    width: 13rem;
 }
 
 .playlist-item{
@@ -16,4 +16,13 @@
 .color{
     color: var(--orange-900);
     font-size: 1.5rem;
+}
+
+.delete-icon {
+    position: absolute;
+    font-size: 1.3rem;
+    right: 0%;
+    top: 30%;
+    border: none;
+    background-color: inherit;
 }
