--- a/src/pages/SingleVideo/SingleVideo.css
+++ b/src/pages/SingleVideo/SingleVideo.css
@@ -16,6 +16,10 @@
     width: 100%;
 }
 
+.history-outline-logo{
+    width: 1.2rem;
+}
+
 .view-section {
     border-bottom: 1px solid;
     padding: .5rem 0 .8rem 0;
