--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,17 +1,17 @@
 .spinner-div {
     height: 100vh;
-    background-color: var(--black-900);
+    /* background-color: var(--black-900); */
 }
 
 .spinner {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
     display: inline-block;
-    border: 5px solid var(--pink-900);
+    border: 7px solid var(--secondary-color);
     border-top-color: transparent;
     border-bottom-color: transparent;
     border-radius: 50%;
-    animation: spin 1s infinite;
+    animation: spin 1.5s infinite;
 }
 
 @keyframes spin {
