--- a/src/pages/Explore/Explore.css
+++ b/src/pages/Explore/Explore.css
@@ -5,7 +5,7 @@
 
 .filter-chips {
     position: fixed;
-    top: 9%;
+    top: 4.3rem;
     width: 100%;
     background-color: var(--primary-color);
     border-bottom: 1px solid var(--black-900);
@@ -18,6 +18,12 @@
     border: 1px solid var(--secondary-color);
     border-radius: 1.2rem;
     margin: .5rem;
+}
+
+.filter-chips-btn {
+    background-color: var(--secondary-color);
+    color: var(--white);
+    border: 2px solid var(--secondary-color);
 }
 
 .item-container {
@@ -72,7 +78,8 @@
 
 @media screen and (max-width: 900px) {
     .filter-chips {
-        top: 16%;
+        top: 7rem;
+        overflow: auto;
     }
 
     .item-container {
