--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,7 +24,7 @@
     width: 1.7rem;
     height: 1.7rem;
     margin-right: 1px;
-    animation: spin 3s infinite;
+    animation: spin 3s infinite linear;
 }
 
 @keyframes spin {
