Changed sidebar color, search element only appear explore screen, hemburger disappear on phone size

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -75,6 +75,16 @@
             "search search";
     }
 
+    .mobile-disappear{
+        display: none;
+    }
+
+    .mobile-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .header-bar section button {
         display: none;
     }
