--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,7 +1,7 @@
 .sidebar-container {
-    height: 91.5vh;
-    top: 8.5vh;
-    background-color: var(--gray-100);
+    height: calc(100vh - 70px);
+    top: 70px;
+    background-color: rgb(44, 63, 81);
 }
 
 #sidebar-icon {
@@ -11,13 +11,23 @@
     cursor: pointer;
 }
 
+.active,
 #sidebar-icon:hover {
-    color: var(--orange-900);
-}
-
-.active {
     background-color: var(--secondary-color);
     color: var(--primary-color);
+    transition: 0.3s;
+}
+
+.sidebar-container li a{
+    color: var(--white);
+}
+
+.sidebar-container li {
+    margin-block: 0.5rem;
+}
+
+.sidebar-container li:first-child {
+    margin-top: 0;
 }
 
 @media screen and (max-width: 900px) {
@@ -30,10 +40,14 @@
         top: unset;
         padding: 0;
         height: max-content;
-        background-color: var(--white);
         box-shadow: var(--box-shadow-light);
         z-index: 2;
     }
+
+.sidebar-container li {
+    margin-block: 0;
+}
+
 
     #sidebar-icon span {
         margin: .2rem ;
