--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,11 +1,11 @@
 .item-section:hover {
-    box-shadow: 1px 1px 1px var(--gray-900),
-                1px 1px 2px var(--gray-900);
+    box-shadow: -1px 0px 1px var(--gray-900),
+                0px 1px 4px var(--gray-900);
+    transition: 0.3s;
 }
 
 .card-image img {
     width: 100%;
-    height: 22vh;
 }   
 
 .logo-title {
