--- a/src/pages/Explore/Explore.css
+++ b/src/pages/Explore/Explore.css
@@ -5,7 +5,7 @@
 
 .filter-chips {
     position: fixed;
-    top: 4.3rem;
+    top: 4.39rem;
     width: 100%;
     background-color: var(--primary-color);
     border-bottom: 1px solid var(--black-900);
@@ -18,6 +18,7 @@
     border: 1px solid var(--secondary-color);
     border-radius: 1.2rem;
     margin: .5rem;
+    text-transform: capitalize;
 }
 
 .filter-chips-btn {
