temp commit before history rewrite

--- a/src/pages/Home/HomeScreen.css
+++ b/src/pages/Home/HomeScreen.css
@@ -5,7 +5,7 @@
 
 .home-container {
     height: 91.5vh;
-    background-image: url(https://images.pexels.com/photos/827209/pexels-photo-827209.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image: url(https://th.bing.com/th/id/R.8571aa7277c351398b7e976f177bf70e?rik=crhRVQ7YL6vUOQ&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f06%2fBest-Images-Night-Sky.jpg&ehk=rIUDgGVYYPWQA5NmpVyiuS3D1Q5v8%2bEFWpl9qp7Mmsg%3d&risl=1&pid=ImgRaw&r=0);
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 100% 100%;
